force-app/main/default/objects/FieloPLT__RewardItem__c/FieloPLT__RewardItem__c.object-meta.xml
<CustomObject>
    <description>Available Rewards when Stock management is &quot;Controlled by Item&quot;.</description>
    <label>Reward Item</label>
    <nameField>
        <displayFormat>IT {00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>