force-app/main/default/objects/FieloPLT__RewardItem__c/fields/FieloPLT__Code__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Code__c</fullName>
    <description>Code from Reward item.</description>
    <inlineHelpText>Code from Reward item.</inlineHelpText>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>