force-app/main/default/objects/FieloPLT__RewardItem__c/fields/FieloPLT__RedemptionItem__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RedemptionItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Redemption item linked to a Reward item.</description>
    <inlineHelpText>Redemption item linked to a Reward item.</inlineHelpText>
    <label>Redemption Item</label>
    <referenceTo>FieloPLT__RedemptionItem__c</referenceTo>
    <relationshipLabel>Reward Items</relationshipLabel>
    <relationshipName>RewardItems</relationshipName>
    <type>Lookup</type>
</CustomField>