force-app/main/default/objects/FieloPLT__RewardItem__c/fields/FieloPLT__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Reward__c</fullName>
    <description>Reward from a Reward item.</description>
    <inlineHelpText>Reward from a Reward item.</inlineHelpText>
    <label>Reward</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloPLT__Reward__c.FieloPLT__StockManagement__c</field>
            <operation>notEqual</operation>
            <value>Unlimited</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FieloPLT__Reward__c</referenceTo>
    <relationshipLabel>Reward Items</relationshipLabel>
    <relationshipName>RewardItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>